src/test/resources/Parser/SyntaxErrors/WrongNumberOfTypeArguments.front
class A<T,U,V>:
    a: A<int32, int32>;